# embassy-boards

./: .gitignore  README.md
cargo-board/: Cargo.toml
cargo-board/src/: main.rs
embassy-boards/: Cargo.toml  build.rs
embassy-boards-config/: Cargo.toml
embassy-boards-config/boards/: pico-w.toml  stm32f429i-disco.toml  stm32h747i-cm4.toml  stm32h747i-cm7.toml
embassy-boards-config/overlay/: pico-explorer.toml
embassy-boards-config/src/: error.rs  lib.rs  memory.rs
embassy-boards-config/src/parser/: memory.rs  mod.rs
embassy-boards-config/src/parser/memory/: generate.rs  validate.rs
embassy-boards-core/: Cargo.toml
embassy-boards-core/src/: lib.rs
embassy-boards-core/src/memory/: mod.rs
embassy-boards/src/: lib.rs
embassy-boards/src/bsp/rp/: mod.rs
embassy-boards/src/bsp/rp/pico_w/: board.rs  mod.rs
embassy-boards/src/bsp/stm32/: mod.rs
embassy-boards/src/bsp/stm32/runtime/: dualcore.rs  mod.rs  mpu.rs
embassy-boards/src/bsp/stm32/shared_queue/: mod.rs  receiver.rs  sender.rs
embassy-boards/src/bsp/stm32/stm32f429i_disco/: board.rs  memory.rs  mod.rs
embassy-boards/src/bsp/stm32/stm32h747i_disco/: memory.rs  mod.rs
embassy-boards/src/bsp/stm32/stm32h747i_disco/cm4/: mod.rs
embassy-boards/src/bsp/stm32/stm32h747i_disco/cm7/: board.rs  display.rs  mod.rs
embassy-boards/src/display/: fonts.rs  framebuffer.rs  glass.rs  log_widget.rs  mod.rs  texture.rs
embassy-boards/src/drivers/: mod.rs
embassy-boards/src/drivers/lcd/panel/: mod.rs
embassy-boards/src/drivers/lcd/panel/ili9341/: mod.rs
embassy-boards/src/drivers/led/: mod.rs
embassy-boards/src/drivers/pmod/: mod.rs
embassy-boards/src/drivers/terminal/: mod.rs
embassy-boards/src/drivers/touch/: mod.rs
embassy-boards/src/memory/: mod.rs  region.rs  section.rs
examples/blinky/: Cargo.toml  build.rs
examples/blinky/.cargo/: config.toml
examples/esp-hosted/: Cargo.toml
examples/esp-hosted/.cargo/: config.toml
examples/primary/: Cargo.toml  build.rs
examples/secondary/: Cargo.toml
examples/secondary/.cargo/: config.toml
examples/stm32h747i-disco/common/: Cargo.toml
examples/stm32h747i-disco/common/src/: lib.rs
examples/stm32h747i-disco/primary/: Cargo.toml
examples/stm32h747i-disco/primary/.cargo/: config.toml
examples/stm32h747i-disco/secondary/: Cargo.toml  build.rs  flash-cm4.sh
examples/stm32h747i-disco/secondary/.cargo/: config.toml
examples/terminal/: Cargo.toml  build.rs
examples/terminal/.cargo/: config.toml
