[package]
name = "embassy-boards-config"
version = "0.1.0"
edition = "2024"

[dependencies]
embassy-boards-core.path = "../embassy-boards-core"
serde = { version = "1.0.228", features = ["derive"] }
toml = { version = "1.1.2", features = ["parse", "serde"]}
clap = { version = "4.6.0", features = ["derive"] }
thiserror = "2.0.18"
