[package]
name = "blinky"
version = "0.1.0"
edition = "2024"

# Platform features
[features]
rp = [ "embassy-boards/rp" ]
stm32 = [ "embassy-boards/stm32" ]

[dependencies]
embassy-boards = { path = "../../embassy-boards", default-features = false }
defmt = "1.0.1"
embassy-executor = { path = "../../../embassy/embassy-executor" }

[profile.release]
lto = true
opt-level = "s"
incremental = false
codegen-units = 1
debug = true
