
[package]
name = "terminal"
version = "0.1.0"
edition = "2024"

[dependencies]
embassy-boards = { path = "../../embassy-boards", default-features = false, features = ["board-stm32f429i-disco", "terminal", "tracing"] }
defmt = "1.0.1"
embassy-executor = { path = "../../../embassy/embassy-executor" }

[profile.release]
lto = true
opt-level = "s"
incremental = false
codegen-units = 1
debug = true

[patch.crates-io]
ratatui.path = "../../../ratatui/ratatui"
ratatui-core.path = "../../../ratatui/ratatui-core"
ratatui-widgets.path = "../../../ratatui/ratatui-widgets"
